# ML-FSM

./: .gitignore  README.md  pyproject.toml
.github/workflows/: quality.yml  test.yml
docs/source/: conf.py  installation.rst
examples/: fsm_example.py
examples/data/09_proton/: initial.xyz
src/mlfsm/: coords.py  cos.py  geom.py  opt.py  utils.py
