[project]
name = "mlfsm"
description = "python implementation of the Freezing String Method"
license = {file = "LICENSE"}
version = "1.0.1"
readme = "README.md"
keywords = []
authors = [
    {name = "Jonah Marks and Joe Gomes", email= "jonahmarks22@gmail.com"}
    ]
maintainers = [{name = "Jonah Marks"}]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "ase>=3.22",
    "scipy>=1.13",
    "geometric>=1.0.0",
    "networkx>=3.0",
]

[project.urls]
Homepage = "https://github.com/thegomeslab/ML-FSM"
Repository = "https://github.com/thegomeslab/ML-FSM"
Issues = "https://github.com/thegomeslab/ML-FSM/issues"

[tool.pixi.project]
channels = ["conda-forge", "pytorch"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
python = "3.11"

[tool.pixi.pypi-dependencies]
mlfsm = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.tasks]
fmt = { cmd="ruff format ." }
lint = { cmd="ruff check . --fix" }
types = { cmd="mypy ." }
test = { cmd="pytest" }
coverage = { cmd = "pytest --cov=src/mlfsm --cov-report=xml" }
docs = { cmd="sphinx-build -b html docs/source docs/build" }
all = { depends-on = ["fmt", "lint", "types", "test", "docs"] }


[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.11"
mypy = ">=1.15"
pre-commit = ">=4.2"
jupyter = "*"
ipython = "*"
py3Dmol = "*"
scipy-stubs = "*"
types-networkx = "*"

pytorch = ">=2.4"
pillow = "<11.3.0"

sphinx = "*"
sphinx-autodoc-typehints = "*"
numpydoc = "*"
sphinx-rtd-theme = "*"
myst-parser = "*"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "N806", # Non-lowercase variable in function
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
sources=["src"]
